--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
         <div class="card" style="width:400px">
-            <img class="card-img-top" src="D:\html pro\ecomors\tomato.jpg" alt="Card image"><br>
+            <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573836/tomato_yda61w.jpg" alt="Card image"><br>
             <div class="card-body">
               <h4 class="card-title">Tomato</h4>
               <p class="card-text">Some example text.</p>
