--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
         <div class="card" style="width:400px">
-            <img class="card-img-top" src="D:\html pro\ecomors\beetroot.jpg" alt="Card image"><br>
+            <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573836/beetroot_eshben.webp" alt="Card image"><br>
             <div class="card-body">
               <h4 class="card-title">Beetroot</h4>
               <p class="card-text">Some example text.</p>
