--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
         <div class="card" style="width:400px">
-            <img class="card-img-top" src="D:\html pro\ecomors\onion.jpg" alt="Card image"><br>
+            <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573841/onion_gfg4b0.png" alt="Card image"><br>
             <div class="card-body">
               <h4 class="card-title">Onion</h4>
               <p class="card-text">Some example text.</p>
