--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="D:\html pro\ecomors\apple.jpg" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709574255/apple_yoxtrm.avif" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Apple</h4>
             <p class="card-text">Some example text.</p>
