--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="D:\html pro\ecomors\orange.jpg" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573836/orange_stdghr.jpg" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Orange</h4>
             <p class="card-text">Some example text.</p>
