--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="D:\html pro\ecomors\coconut.jpg" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573837/pineapple_v2srkl.webp" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Coconut</h4>
             <p class="card-text">Some example text.</p>
