--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573837/pineapple_v2srkl.webp" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573834/coconut_jwkb9p.webp" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Coconut</h4>
             <p class="card-text">Some example text.</p>
@@ -177,7 +177,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="D:\html pro\ecomors\badam.jpg" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573834/badam_hrjexz.jpg" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Badam</h4>
             <p class="card-text">Some example text.</p>
@@ -190,7 +190,7 @@
 
 
       <div class="card" style="width:400px">
-          <img class="card-img-top" src="D:\html pro\ecomors\lassi.jpg" alt="Card image"><br>
+          <img class="card-img-top" src="https://res.cloudinary.com/dkpwthazx/image/upload/v1709573837/lassi_pgz30l.webp" alt="Card image"><br>
           <div class="card-body">
             <h4 class="card-title">Lassi</h4>
             <p class="card-text">Some example text.</p>
